--- a/kouncil-backend/pom.xml
+++ b/kouncil-backend/pom.xml
@@ -33,6 +33,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>2.6.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>2.6.7</version>
         </dependency>
